[workspace]
members = [
    "packages/*",
    "tools/*",
    "examples/*",
]
exclude = ["examples/.cargo"]
default-members = [
    "packages/*",
]
resolver = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(documenting)",
    "cfg(verbose_tests)",
    "cfg(yew_lints)",
    "cfg(nightly_yew)",
    "cfg(wasm_bindgen_unstable_test_coverage)"
]}
[workspace.dependencies]
tokio = { version = "1.48.0" }
implicit-clone = { version = "0.6.0" }
proc-macro2 = "1"
quote = "1"
trybuild = { version = "1.0.114" }
syn = { version = "2" }
clap = { version = "4", features = ["derive"] }
bytes = { version = "1.11.0" }
