[package]
name = "devtools-extension"
version = "0.1.0"
authors = ["Yew Mainainers <mainainers@yew.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.16.2"
serde={version="1", features=["derive"]}
serde_json="1"
# this is waiting for a new release to be published
indextree={git="https://github.com/saschagrunert/indextree", rev="2840ab7"}