[package]
name = "devtools"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
actix-web="2.0"
actix-rt="1.0"
actix="0.9"
actix-web-actors="2.0"
rand="0.7"
futures="0.3.5"