[package]
name = "docs"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doc-comment="0.3.3"
yew = {version="0.14.0", features = ["std_web", "wasm_test"]}
wasm-bindgen-test = "0.3.0"