[workspace]
members = [
  "counter",
  "crm",
  "custom_components",
  "dashboard",
  "file_upload",
  "fragments",
  "game_of_life",
  "inner_html",
  "js_callback",
  "large_table",
  "minimal",
  "mount_point",
  "multi_thread",
  "nested_list",
  "npm_and_rest",
  "routing",
  "server",
  "showcase",
  "textarea",
  "timer",
  "todomvc",
  "two_apps",
]
