[workspace]
members = [
  "counter",
  "crm",
  "custom_components",
  "dashboard",
  "node_refs",
  "file_upload",
  "fragments",
  "futures",
  "game_of_life",
  "inner_html",
  "js_callback",
  "large_table",
  "minimal",
  "mount_point",
  "multi_thread",
  "nested_list",
  "npm_and_rest",
  "server",
  "showcase",
  "textarea",
  "timer",
  "todomvc",
  "two_apps",
  "pub_sub",
  "webgl"
]
