[workspace]
members = [
  "crm",
  "custom_components",
  "dashboard",
  "fragments",
  "futures",
  "game_of_life",
  "large_table",
  "minimal",
  "nested_list",
  "pub_sub",
  "server",
  "showcase",
  "textarea",
  "timer",
  "std_web/counter",
  "std_web/file_upload",
  "std_web/inner_html",
  "std_web/js_callback",
  "std_web/mount_point",
  "std_web/multi_thread",
  "std_web/node_refs",
  "std_web/npm_and_rest",
  "std_web/todomvc",
  "std_web/two_apps",
  "std_web/webgl",
  "web_sys/counter",
  "web_sys/file_upload",
  "web_sys/inner_html",
  "web_sys/js_callback",
  "web_sys/mount_point",
  "web_sys/multi_thread",
  "web_sys/node_refs",
  "web_sys/npm_and_rest",
  "web_sys/todomvc",
  "web_sys/two_apps",
  "web_sys/webgl",
]
