[package]
name = "yew-cli"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1"
maplit = "1.0.2"
rayon = "1.3.1"
lazy_static = "1.4.0"
log = "0.4.11"
clap = "2.33.1"
warp = "0.2.3"
thiserror = "1"
tokio = { version="0.2", features=["full", "macros"] }
