[package]
name = "yew-cli"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1"
maplit = "1.0.2"
rayon = "1.3.1"
lazy_static = "1.4.0"
log = "0.4.11"
clap = "2.33.1"
webbrowser = "0.5.5"
thiserror = "1"
actix-web = "2.0.0"
actix-rt  = "1.1.1"
actix-files = "0.2.2"
shell-escape = "0.1.5"

[[bin]]
name = "yew"
path = "src/main.rs"
