[package]
name = "yew-cli"
version = "0.1.0"
authors = [
    "Alexandra Østermark <alex.cramt@gmail.com>",
    "Philip Peterson <pc.peterso@gmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1"
maplit = "1.0.2"
rayon = "1.3.1"
lazy_static = "1.4.0"
log = "0.4.11"
clap = "2.33.1"
webbrowser = "0.5.5"
thiserror = "1"
actix-web = "2.0.0"
actix-rt  = "1.1.1"
actix-files = "0.2.2"
shell-escape = "0.1.5"
cargo_metadata = "0.11.1"
handlebars = "3.3.0"
serde = "1.0.114"
serde_json = "1.0.57"
include_dir = "0.6.0"
whoami = "0.9.0"


[[bin]]
name = "yew"
path = "src/main.rs"
