[package]
name = "yew-function-components"
version = "0.13.0"
authors = ["ZainlessBrombie <zainredirect@gmail.com>"]
edition = "2018"
repository = "https://github.com/yewstack/yew"
homepage = "https://github.com/yewstack/yew"
license = "MIT/Apache-2.0"
keywords = ["web", "wasm", "frontend", "webasm", "webassembly"]
categories = ["gui", "web-programming", "wasm"]
description = "A framework for making client-side single-page apps"

[dev-dependencies]
wasm-bindgen-test = "0.3.9"
web-sys = "0.3.36"
yew = { path = "../yew" }

[dependencies]
yew = { path = "../yew" }
yew-function-components-macro = { path = "../yew-function-components-macro" }
wasm-bindgen = "0.2.60"
