[package]
name = "yew-router-macro"
version = "0.14.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Contains macros used with yew-router"
repository = "https://github.com/yewstack/yew"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.2"
quote = "1.0.1"
yew-router-route-parser = { version = "0.14.0", path = "../yew-router-route-parser"}
proc-macro2 = "1.0.1"

[dev-dependencies]
yew-router = { version = "0.14.0", path = "../yew-router" } # This should probably be removed, it makes the deploy process much more annoying.