[package]
name = "yew-router"
version = "0.11.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>", "Sascha Grunert <mail@saschagrunert.de>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "yew", "router"]
categories = ["gui", "web-programming"]
description = "A router implementation for the Yew framework"
repository = "https://github.com/yewstack/yew_router"

[features]
default = ["web_sys", "core", "unit_alias"]
core = ["router", "components"] # Most everything
unit_alias = [] # TODO remove this
router = ["agent"] # The Router component
components = ["agent" ] # The button and anchor
agent = ["service"] # The RouteAgent
service = ["yew"] # The RouteService
std_web = [
    "yew/std_web",
    "stdweb"
]
web_sys = [
    "yew/web_sys",
    "gloo",
    "js-sys",
    "web-sys",
    "wasm-bindgen"
]

[dependencies]
cfg-if = "0.1.10"
cfg-match = "0.2"
gloo = { version = "0.2.0", optional = true }
js-sys = { version = "0.3.35", optional = true }
log = "0.4.8"
nom = "5.1.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
stdweb = { version = "0.4.20", optional = true }
wasm-bindgen = { version = "0.2.58", optional = true }
yew = { path = "../yew", features = ["services", "agent"], optional = true }
yew-router-macro = { path = "../yew-router-macro" }
yew-router-route-parser = { path = "../yew-router-route-parser" }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    'History',
    'HtmlLinkElement',
    'Location',
    'MouseEvent',
    'PopStateEvent',
    'Window',
]

# Compat with building yew with wasm-pack support.
[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
wasm-bindgen = "0.2.58"

[dev-dependencies]
uuid = "0.8.1"
