[package]
name = "yew-stdweb"
version = "0.14.3"
edition = "2018"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "Justin Starry <justin@yew.rs>",
]
repository = "https://github.com/yewstack/yew"
homepage = "https://github.com/yewstack/yew"
documentation = "https://docs.rs/yew/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["gui", "web-programming"]
description = "A framework for making client-side single-page apps"

[badges]
travis-ci = { repository = "yewstack/yew" }

[dependencies.yew]
path = "../yew"
default-features = false
features = ["agent", "services", "std_web"]

[workspace]
members = [
  "examples/counter",
  "examples/file_upload",
  "examples/inner_html",
  "examples/js_callback",
  "examples/mount_point",
  "examples/multi_thread",
  "examples/node_refs",
  "examples/npm_and_rest",
  "examples/todomvc",
  "examples/two_apps",
  "examples/webgl",
]