[package]
name = "yew-functional"
version = "0.13.0"
authors = ["ZainlessBrombie <zainredirect@gmail.com>"]
edition = "2018"
repository = "https://github.com/yewstack/yew"
homepage = "https://github.com/yewstack/yew"
license = "MIT/Apache-2.0"
keywords = ["web", "wasm", "frontend", "webasm", "webassembly"]
categories = ["gui", "web-programming", "wasm"]
description = "A framework for making client-side single-page apps"


[badges]
travis-ci = { repository = "yewstack/yew" }

[dev-dependencies]
wasm-bindgen-test = "0.3.9"
cfg-if = "0.1.10"
web-sys = { version = "0.3.36" }
yew = { path = "../..", features = ["web_sys"] }

[dependencies]
yew = { path = "../.." }

[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
wasm-bindgen = "0.2.60"

[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dev-dependencies]
wasm-bindgen-test = "0.3.4"

[features]
wasm_test = []
web_sys = ["yew/web_sys"]
std_web = ["yew/std_web"]
